--- a/shopping-app/src/Components/Lists/Lists.css
+++ b/shopping-app/src/Components/Lists/Lists.css
@@ -2,14 +2,16 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(auto-fill, 10vh);
-  width: 35%;
+  width: 25%;
+  min-width: 250px;
   height: 80vh;
   margin: 45px;
   padding: 5px;
-  border-radius: 3px;
+  border-radius: 10px;
   border: 1px solid black;
-  overflow: scroll;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.04204);
+  overflow: auto;
+  overflow-x: hidden;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
